# kosh

./: .gitignore  README.md  benchmark_falsifier.py  benchmark_sprint_1.py  benchmark_v2.py  mcp_server.py  pyproject.toml  test_legal_usability.py  test_real_pdfs.py
benchmarks/: baseline.py  run_benchmark.py  run_benchmark_chess.py  run_benchmark_hle.py  run_benchmark_hypokosh.py  run_benchmark_linguistics.py  run_benchmark_native.py  run_benchmark_v2.py  run_benchmark_v3.py  run_benchmark_v4.py
benchmarks/corpus/: __init__.py  fusion_ignition.py  gravitational_waves.py  hypokosh.py  paradigm_shift.py
benchmarks/corpus/cern_fusion_raw/: cern_1995.md  iter_2005.md  mit_2022.md
benchmarks/corpus/chess_raw/: alphazero_2017.md  fischer_1972.md  kasparov_1997.md
benchmarks/corpus/chicxulub_raw/: alvarez_1980.md  clemens_1986.md  hildebrand_1991.md  pemex_1981.md
benchmarks/corpus/hle_raw/: hle_premise.md  hypothesis_alpha.md  hypothesis_beta.md  hypothesis_gamma.md
kosh/: __init__.py  cdss.py  kernel.py  models.py  reasoning.py
kosh/adapters/: native_ingestor.py
kosh/linguistics/: __init__.py  extractor.py  lexicons.py  scorer.py  trie.py
