[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kosh"
version = "0.2.0"
authors = [
  { name="Code Factory System" },
]
description = "A fast, memory-mapped causal graph database designed for AI reasoning."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "msgpack",
    "mcp"
]

[project.urls]
"Homepage" = "https://github.com/example/kosh"

[tool.setuptools.packages.find]
include = ["kosh*"]
